--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-icons-kit": "^1.2.1",
+    "react-scripts": "2.1.1",
+    "slate": "^0.44.9",
+    "slate-react": "^0.21.15",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
